<resources>
    <string name="app_name">Weather</string>
    <string name="Моё_местоположение">Моё местоположение</string>
    <string name="Сменить_город">Сменить город</string>
    <string name="Давление">Давление</string>
    <string name="Влажность">Влажность</string>
    <string name="ms">%1$s м/с</string>
    <string name="Вероятность_дождя">Вероятность дождя</string>
    <string name="mm.rt.ct">%1$s мм рт.ст.</string>
    <string name="percent">%1$s%%</string>
    <string name="Омск">Омск</string>
    <string name="current_weather_no_sign">%1$.01f%2$s</string>
    <string name="temperatureCelsius">%1$sº</string>
    <string name="temperatureFaringates">%1$sF</string>
    <string name="hint_5mc">5 м/с, западный</string>
    <string name="hint_mm_rt_st">752 мм рт.ст.</string>
    <string name="moisture_percentage_count">60%</string>
    <string name="probability_count">10%</string>
    <string name="f">F</string>
    <string name="c">C</string>
    <string name="SearchCity">Поиск города</string>
    <string name="дождь">Дождь</string>
    <string name="ветер">Ветер</string>
    <string name="нет_данных">нет данных</string>

</resources>
